fix safari transparent and z-index bugs

--- a/assets/scss/_lighthouse.scss
+++ b/assets/scss/_lighthouse.scss
@@ -192,9 +192,9 @@ $light_height: $light-width * tan($light_deg) * 2;
 	position: absolute;
 	top: 60vh;
 	left: 50%;
-	-webkit-transform: translate(-50%,-115%);
-	    -ms-transform: translate(-50%,-115%);
-	        transform: translate(-50%,-115%);
+	-webkit-transform: translate3d(-50%,-115%,500px);
+	    -ms-transform: translate3d(-50%,-115%,500px);
+	        transform: translate3d(-50%,-115%,500px);
 	-webkit-perspective: 150px;
 	        perspective: 150px;
 	z-index: 0;
